# alexandria-api

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  compose.yaml  main.py  pyproject.toml  requirements.txt  seeds.py
alembic/: env.py
alembic/versions/: 1bec86eb99e5_add_authors_fullname_constraint.py  3091d6e2083b_create_author_table.py  381a2879da37_create_authorbooks_table.py  4f5e2355636c_create_book_table.py  f5aa3b34a828_create_genre_table.py
controllers/v1/: ctrlsAuthor.py  ctrlsBook.py  ctrlsGenre.py
db/: connection.py  seeds.py
models/v1/: __init__.py  author.py  authorBook.py  book.py  dec_base.py  genre.py
routes/: authors.py  books.py  genres.py  utils.py
schemas/: author.py  book.py  genre.py
tests/: conftest.py
tests/api_tests/: test_author.py  test_book.py  test_genre.py
