[project]
name = "alexandria-api"
version = "0.0.1"
authors = [
  { name="Pedro Moreira", email="pedro.lucas.rocha72@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.urls]
Homepage = "https://github.com/RoPedro/alexandria-api"
Issues = "https://github.com/RoPedro/alexandria-api/issues"